--- a/index.html
+++ b/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
     <title>Team Ghost Argentina</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    <header>
-        <section>
-            <!--titulo izquierdo-->
-            <h1 class="header__h">Team Ghost Argentina</h1>
-            <!--imagen central-->
-            <img class="header__img" src="./image/Logo Team Ghost Sombra.png" alt="Logo del equipo">
-            <!--titulo derecho-->
-            <h2 class="header__h">Airsoft Team</h2>
-        </section>
+    <div class="index__grid-container">
+        <header>
+            <section>
+                <!--titulo izquierdo-->
+                <h1 class="header__h">Team Ghost Argentina</h1>
+                <!--imagen central-->
+                <img class="header__img" src="./image/Logo Team Ghost Sombra.png" alt="Logo del equipo">
+                <!--titulo derecho-->
+                <h2 class="header__h">Airsoft Team</h2>
+            </section>
+        </header>
         <nav>
             <ul class="nav justify-content-evenly">
                 <li class="nav-item bg-primary rounded">
@@ -40,68 +45,100 @@
                 </li>
             </ul>
         </nav>
-    </header>
-    <main>
-        <section class="main__section__hero">
-            <h3>Bienvenidos a la pagina oficial del Team Ghost Arg</h3>
+        <main>
+            <section class="main__section__hero">
+                <h3>Bienvenidos a la pagina oficial del Team Ghost Arg</h3>
+                <div>
+                    <p>Pagina oficial del equipo mas picante del condado. Una serie de maniaticos fanaticos de las armas
+                        que
+                        encontraron un juego en el cual pueden satisfacer todas sus necesidades de matanza y diversion
+                    </p>
+                    <img src="./image/equipo airsoft.jpeg" alt="imagen equipo">
+                </div>
+            </section>
             <div>
-                <p>Pagina oficial del equipo mas picante del condado. Una serie de maniaticos fanaticos de las armas que encontraron un juego en el cual pueden satisfacer todas sus necesidades de matanza y diversion</p>
-            <img src="./image/equipo airsoft.jpeg" alt="imagen equipo">
+                <section class="main__section__noticias">
+                    <h4>Noticias</h4>
+                    <div>
+                        <h5>18/04/2023</h5>
+                        <P>Fecha de entrega. Para esta fecha se debe tener completado el proyecto sin grids</P>
+                    </div>
+                    <div>
+                        <h5>15/04/2023</h5>
+                        <P>Se comienza a aplicar CSS en todas las paginas</P>
+                    </div>
+                    <div>
+                        <h5>08/04/2023</h5>
+                        <P>Pagina en creacion</P>
+                    </div>
+                </section>
+                <section class="main__section__proximoevento">
+                    <h4>Proximo evento al que asistiremos</h4>
+                    <div class="main__section__proximoevento__div">
+                        <div>
+                            <h5>El matadero</h5>
+                            <p>Evento a realizarse en Campo de Mayo, en la seccion de entrenamiento militar llamada El
+                                Matadero. Consta de un edificio de 5 pisos rodeado de arboleda y estructuras anexas
+                                donde se
+                                llevan a cabo entrenamientos de ingreso a areas y cobertura de altura. El evento esta
+                                organizado por "Juegos de Guerra" acompañado de "7.62 Cafe". Las coordenadas del lugar
+                                son:
+                                "-34.504619, -58.629573". El evento se realiza el dia Sabado 22/04/23 con ingreso a las
+                                08:00hs</p>
+                        </div>
+                        <div>
+                            <img src="./image/JDG logo.jpeg" alt="imagen del campo u organizacion">
+                        </div>
+                    </div>
+                </section>
             </div>
-        </section>
-        <div>
-            <section class="main__section__noticias">
-                <h4>Noticias</h4>
-                <div>
-                    <h5>18/04/2023</h5>
-                    <P>Fecha de entrega. Para esta fecha se debe tener completado el proyecto sin grids</P>
-                </div>
-                <div>
-                    <h5>15/04/2023</h5>
-                    <P>Se comienza a aplicar CSS en todas las paginas</P>
-                </div>
-                <div>
-                    <h5>08/04/2023</h5>
-                    <P>Pagina en creacion</P>
-                </div>
-            </section>
-            <section class="main__section__proximoevento">
-                <h4>Proximo evento al que asistiremos</h4>
-                <div class="main__section__proximoevento__div">
-                    <div>
-                        <h5>El matadero</h5>
-                        <p>Evento a realizarse en Campo de Mayo, en la seccion de entrenamiento militar llamada El Matadero. Consta de un edificio de 5 pisos rodeado de arboleda y estructuras anexas donde se llevan a cabo entrenamientos de ingreso a areas y cobertura de altura. El evento esta organizado por "Juegos de Guerra" acompañado de "7.62 Cafe". Las coordenadas del lugar son: "-34.504619, -58.629573". El evento se realiza el dia Sabado 22/04/23 con ingreso a las 08:00hs</p>
-                    </div>
-                    <div>
-                        <img src="./image/JDG logo.jpeg" alt="imagen del campo u organizacion">
-                    </div>
-                </div>
-            </section>
-        </div>
-    </main>
-    <footer>
-        <nav>
-            <ul>
+
+        </main>
+        <footer>
+            <div>
                 <!--panel de navegacion inferior-->
-                <li class="footer__nav__ul__li"><a href="./index.html">Inicio</a></li>
-                <li class="footer__nav__ul__li"><a href="./pages/quienes-somos.html">Quienes somos</a></li>
-                <li class="footer__nav__ul__li"><a href="./pages/experiencias.html">Experiencias</a></li>
-                <li class="footer__nav__ul__li"><a href="./pages/merchandising.html">Merchandising</a></li>
-                <li class="footer__nav__ul__li"><a href="./pages/contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-        <div>
-            <div>
-                <a href="https://www.facebook.com/" target="_blank"><img src="./image/facebook.png" alt="icono facebook"></a>
-                <a href="https://twitter.com/" target="_blank"><img src="./image/twitter.png" alt="icono twitter"></a>
-                <a href="https://www.instagram.com/real1ghost/" target="_blank"><img src="./image/instagram.png" alt="icono instagram"></a>
-                <a href="https://www.youtube.com/" target="_blank"><img src="./image/youtube.png" alt="icono youtube"></a>
-                <a href="https://web.telegram.org/" target="_blank"><img src="./image/telegram.png" alt="icono telegram"></a>
-                <a href="https://api.whatsapp.com/send/?phone=1164651996&text&type=phone_number&app_absent=0" target="_blank"><img src="./image/whatsapp.png" alt="icono whatsapp"></a>
+                <ul class="nav justify-content-evenly">
+                    <li class="nav-item bg-primary rounded">
+                        <a class="nav-link btn btn-secondary text-light" href="./index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item bg-primary rounded">
+                        <a class="nav-link btn btn-secondary text-light" href="./pages/quienes-somos.html">Quienes somos</a>
+                    </li>
+                    <li class="nav-item bg-primary rounded">
+                        <a class="nav-link btn btn-secondary text-light" href="./pages/experiencias.html">Experiencias</a>
+                    </li>
+                    <li class="nav-item bg-primary rounded">
+                        <a class="nav-link btn btn-secondary text-light" href="./pages/merchandising.html">Merchandising</a>
+                    </li>
+                    <li class="nav-item bg-primary rounded">
+                        <a class="nav-link btn btn-secondary text-light" href="./pages/contacto.html">Contacto</a>
+                    </li>
+                </ul>
             </div>
-            <p>Todos los derechos reservados por mi en 2023</p>
-        </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+            <div class="footer__div__pie">
+                <div>
+                    <a href="https://www.facebook.com/" target="_blank"><img src="./image/facebook.png"
+                            alt="icono facebook"></a>
+                    <a href="https://twitter.com/" target="_blank"><img src="./image/twitter.png"
+                            alt="icono twitter"></a>
+                    <a href="https://www.instagram.com/real1ghost/" target="_blank"><img src="./image/instagram.png"
+                            alt="icono instagram"></a>
+                    <a href="https://www.youtube.com/" target="_blank"><img src="./image/youtube.png"
+                            alt="icono youtube"></a>
+                    <a href="https://web.telegram.org/" target="_blank"><img src="./image/telegram.png"
+                            alt="icono telegram"></a>
+                    <a href="https://api.whatsapp.com/send/?phone=1164651996&text&type=phone_number&app_absent=0"
+                        target="_blank"><img src="./image/whatsapp.png" alt="icono whatsapp"></a>
+                </div>
+                <div>
+                    <p>Todos los derechos reservados por mi en 2023</p>
+                </div>
+            </div>
+        </footer>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
