--- a/pages/experiencias.html
+++ b/pages/experiencias.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
     <title>Team Ghost Argentina</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
@@ -21,13 +22,22 @@
             <h2 class="header__h">Airsoft Team</h2>
         </section>
         <nav>
-            <ul>
-                <!--panel de navegacion-->
-                <li class="header__nav__ul__li"><a href="../index.html">Inicio</a></li>
-                <li class="header__nav__ul__li"><a href="./quienes-somos.html">Quienes somos</a></li>
-                <li class="header__nav__ul__li"><a href="./experiencias.html">Experiencias</a></li>
-                <li class="header__nav__ul__li"><a href="./merchandising.html">Merchandising</a></li>
-                <li class="header__nav__ul__li"><a href="./contacto.html">Contacto</a></li>
+            <ul class="nav justify-content-evenly">
+                <li class="nav-item bg-primary rounded">
+                    <a class="nav-link btn btn-secondary text-light" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item bg-primary rounded">
+                    <a class="nav-link btn btn-secondary text-light" href="./quienes-somos.html">Quienes somos</a>
+                </li>
+                <li class="nav-item bg-primary rounded">
+                    <a class="nav-link btn btn-secondary text-light" href="./experiencias.html">Experiencias</a>
+                </li>
+                <li class="nav-item bg-primary rounded">
+                    <a class="nav-link btn btn-secondary text-light" href="./merchandising.html">Merchandising</a>
+                </li>
+                <li class="nav-item bg-primary rounded">
+                    <a class="nav-link btn btn-secondary text-light" href="./contacto.html">Contacto</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -81,5 +91,6 @@
             <p>Todos los derechos reservados por mi en 2023</p>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
