--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -80,26 +80,44 @@
         </section>
     </main>
     <footer>
-        <nav>
-            <ul>
-                <!--panel de navegacion inferior-->
-                <li class="footer__nav__ul__li"><a href="../index.html">Inicio</a></li>
-                <li class="footer__nav__ul__li"><a href="../pages/quienes-somos.html">Quienes somos</a></li>
-                <li class="footer__nav__ul__li"><a href="../pages/experiencias.html">Experiencias</a></li>
-                <li class="footer__nav__ul__li"><a href="../pages/merchandising.html">Merchandising</a></li>
-                <li class="footer__nav__ul__li"><a href="../pages/contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
         <div>
+            <!--panel de navegacion inferior-->
+            <ul class="nav justify-content-evenly">
+                <li class="nav-item bg-primary rounded">
+                    <a class="nav-link btn btn-secondary text-light" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item bg-primary rounded">
+                    <a class="nav-link btn btn-secondary text-light" href="../pages/quienes-somos.html">Quienes
+                        somos</a>
+                </li>
+                <li class="nav-item bg-primary rounded">
+                    <a class="nav-link btn btn-secondary text-light" href="../pages/experiencias.html">Experiencias</a>
+                </li>
+                <li class="nav-item bg-primary rounded">
+                    <a class="nav-link btn btn-secondary text-light" href="../pages/merchandising.html">Merchandising</a>
+                </li>
+                <li class="nav-item bg-primary rounded">
+                    <a class="nav-link btn btn-secondary text-light" href="../pages/contacto.html">Contacto</a>
+                </li>
+            </ul>
+        </div>
+        <div class="footer__div__pie">
             <div>
-                <a href="https://www.facebook.com/" target="_blank"><img src="../image/facebook.png" alt="icono facebook"></a>
+                <a href="https://www.facebook.com/" target="_blank"><img src="../image/facebook.png"
+                        alt="icono facebook"></a>
                 <a href="https://twitter.com/" target="_blank"><img src="../image/twitter.png" alt="icono twitter"></a>
-                <a href="https://www.instagram.com/real1ghost/" target="_blank"><img src="../image/instagram.png" alt="icono instagram"></a>
-                <a href="https://www.youtube.com/" target="_blank"><img src="../image/youtube.png" alt="icono youtube"></a>
-                <a href="https://web.telegram.org/" target="_blank"><img src="../image/telegram.png" alt="icono telegram"></a>
-                <a href="https://api.whatsapp.com/send/?phone=1164651996&text&type=phone_number&app_absent=0" target="_blank"><img src="../image/whatsapp.png" alt="icono whatsapp"></a>
+                <a href="https://www.instagram.com/real1ghost/" target="_blank"><img src="../image/instagram.png"
+                        alt="icono instagram"></a>
+                <a href="https://www.youtube.com/" target="_blank"><img src="../image/youtube.png"
+                        alt="icono youtube"></a>
+                <a href="https://web.telegram.org/" target="_blank"><img src="../image/telegram.png"
+                        alt="icono telegram"></a>
+                <a href="https://api.whatsapp.com/send/?phone=1164651996&text&type=phone_number&app_absent=0"
+                    target="_blank"><img src="../image/whatsapp.png" alt="icono whatsapp"></a>
             </div>
-            <p>Todos los derechos reservados por mi en 2023</p>
+            <div>
+                <p>Todos los derechos reservados por mi en 2023</p>
+            </div>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
