footer event y qs

--- a/pages/experiencias.html
+++ b/pages/experiencias.html
@@ -72,21 +72,21 @@
         <div>
             <!--panel de navegacion inferior-->
             <ul class="nav justify-content-evenly">
-                <li class="nav-item bg-primary rounded">
-                    <a class="nav-link btn btn-secondary text-light" href="../index.html">Inicio</a>
+                <li>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../index.html">Inicio</a>
                 </li>
-                <li class="nav-item bg-primary rounded">
-                    <a class="nav-link btn btn-secondary text-light" href="../pages/quienes-somos.html">Quienes
+                <li>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../pages/quienes-somos.html">Quienes
                         somos</a>
                 </li>
-                <li class="nav-item bg-primary rounded">
-                    <a class="nav-link btn btn-secondary text-light" href="../pages/experiencias.html">Experiencias</a>
+                <li>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../pages/experiencias.html">Experiencias</a>
                 </li>
-                <li class="nav-item bg-primary rounded">
-                    <a class="nav-link btn btn-secondary text-light" href="../pages/merchandising.html">Merchandising</a>
+                <li>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../pages/merchandising.html">Merchandising</a>
                 </li>
-                <li class="nav-item bg-primary rounded">
-                    <a class="nav-link btn btn-secondary text-light" href="../pages/contacto.html">Contacto</a>
+                <li>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../pages/contacto.html">Contacto</a>
                 </li>
             </ul>
         </div>
