--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -41,63 +41,73 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <section class=".main__section__hero">
+    <main class="qs__main__grid-container">
+        <section class="main__section__hero__qs">
             <h3>El equipo de airsoft mas picante del condado presenta a sus operadores</h3>
             <h4>Te dejamos una breve descripcion de cada uno de nosotros</p>
         </section>
-        <section class="main__section__qs">
-            <div>
-                <h5>Operador Negro</h5>
-                <p>Conocido como el Capitan del equipo. Forma parte de los fundadores del equipo. Fue el de la idea. Suele tomar decisiones en el frente de la batalla. Siempre esta en el frente y resuelve situaciones conflictivas. Su marcadora principal es una GyG M4 en modo Asalto.</p>
-                <img src="https://lh3.googleusercontent.com/pw/AJFCJaV61fk6bej00AG6LSKwZ_lYfTgFgwadzix291GKHevKnUQ5Lv3_v5WSVHRTQl-EPMAjMyvwDE-P6WiT7sWgx0C3BqezcRph4Qgv6OElvin_5PX2v-D5gybFqWD2ut-lbekqRu_xKT4EqBvNkVyvbruiw0CpOXPvpGj8Ia9EObaZSxugquUzE83P9nW_Z66gxmJ4S05QTe9Epvo-OBHiNU3WUpq8BLW9LwnFEqpJ9fxqgufN7eRbx29cVgNx03wJRPwzWPOuHvCaGKi4niivp6wXT2GCWM7nJiOuwUS6eD0bVlyu18cyTLmZ1K1-cT0QmwVnQ84IiZlywgXwE_deq9KZVxF8SyCMmhoKzmecvGO2nd-OIsIKZw0LkKnzXtN49y6yLK6-Gaz6tw3rjXaotGyOObBRAqHM8wKqNQmDVtVsIraA7CJUY5F9MYhhIXTCPx2mINrT0T71Fy7UEYpA7svP3tXcIOG43JVxD1eKJbonPczcmkP6MUP-foC6xxUjoWpjJUV7Ju9ekUCSVW-qIyXEEkp2rZr8X3E1i5G3VP3DGVhyE2R7rTgoAu257KUJc14BHiE6_8k0hEHuKz5H3tcx8yhahyAQQScweMw2S7t3BI_Hv5g7pDV8RuUXOVXQ64Vt6-C6LzfI-Kik00avVhG5gv7KaQIz1xSrdVtwM38qeF0X120UKV70VXcIw1uh5ZEeVw-ul-CyobOJdvn0ALc4lEbVzKj2Po6YnIpEzP4nk_0AfLmVhke5CjqTTTrOeJ8ejEzgaZvfFjnZ1HooJoxUJJbn9nSrd-TeUITHxAGUxyOtjRT6fs2tdJ098isILYdDe-mkB9vbuWyvQMUcGBHyWCuLYeo-pnL9YUYGTSyCN5-WmIRp8Mo1949dnVUVV43nQr24eXJRGO3Hioj2JcnSIufQUcmlZBV6EBvp1bvbKe7gcw=w600-h800-s-no?authuser=2" alt="foto negro">
-            </div>
-            <div>
-                <h5>Operador Likoy</h5>
-                <p>Llamado asi por su pasado como Scout. Llego a los cargos mas altos antes de enlistarse en el equipo. Siempre acompañado de su riñonera con la cual relaja las partidas con puchos en cualquier momento. Buscando las fallas de las ofensivas enemigas. Su marcadora principal es una FN Herstal FN2000 en modo CQB.</p>
-                <img src="" alt="foto ale">
-            </div>
-            <div>
-                <h5>Operador Mono</h5>
-                <p>Conocido asi por su parecido a los integrantes de la banda narco "los monos". Su origen es desconocido. Mano derecha del Operador Negro. Cuando te descuidas los encontras discutiendo. Pero eso no significa que no libren batalla codo a codo defendiendose y avanzando en conjunto. Su marcadora principal es una HK G36 Custom en modo Asalto.</p>
-                <img src="https://lh3.googleusercontent.com/pw/AJFCJaVDwqfgSL6yUofG_rZbHQZD_gZNbPGZ7-mCSDVZJJSkRlRUncvo-vDhuwXTpdVIgPrubtkqEPXQpF-iT96qA55hZ4Fqrkb8QMxIjfFdmWNEZzmS6MqAmh_nLXVWMf1XWu_17UfqOT8TvDvgZHF34ssIKt1I9COgyZuNiwD5xXZlGu1QLrzoLsszlRzm7_BXXFn8VHoobBqvLMi4cfylzIiRZq6wEQ6TyfsDtu93wljEwdeYVOGzq8rrcbCVAUZjOBd3cJ3l2plh8JKrrE3cQyarsSXNi9yUwQdEaFXSpeEF1R6_imr-FRmYoliM_gJYVfS9awGOX1mbjAS0J_wUfCrADn0L8YMMttL2b5xJbTTqCE6hRQS1BRRCcoB-E_O06NIfid_TD9YN3EbYgAab53Kl7UKQZqfoJP8ekppgb5pKdlCENpC2b2yfjYryhUvs4GUDXTlJ9OcTFuOi__44zS7E_zwMfxfbv3kkNjJNJ-P7IGyynNMW2Wgk0O3p5JnO177a06W8J0WQzqnyJGAbU_hFb2ayJdWw5aYNmkmxht7ju3K8d2wGht9V5sjX0RCHKplhZvjn0kKSlYbVuHfhqN9iLmQ-3rU-Pj6Xa3ypfvj2jr99G53ESb4hfoQOg0jXsU9ejLNf_BHPe6G1SCt7AZxZYxu6oBq-hwnwZEQXXfmb1UpDTiLPfk4kS8PkpXKfniWYWnqFA0O5ABRn4Rqx20WyMQ1wTSL0ONaufhkgdOIcUNrlC5OD716OBjQgg0IGV3X9M9m0K2VwoIfc6OjCVi3zcht6fIzT7JPBhFUZZO48j9StVJ4ogA-3907ro2jwqq6Vxl5qz4KcSX6gcNiYVrKaszwZv_53ngCumbZQao8WAlXfN1ugyV0PABj_ZtzrykGRq2GmS26V6d-Put8_uOeidwBjyh9VJi-sHN-RDVztfJ9dyg=w683-h911-s-no?authuser=2" alt="foto mono">
-            </div>
-            <div>
-                <h5>Operador Fede</h5>
-                <p>Con su alias aun no ganado, se equipa de forma rapida, buscando los mejores componentes para su armamento. Suele ir a explorar en misiones de reconocimiento junto al Operador Mono u otro compañero que pueda seguirle el paso. Habil corredor. Fanatico de las armas de origen Ruso. Su marcadora principal es una Krytak AK74 en modo Asalto.</p>
-                <img src="https://lh3.googleusercontent.com/pw/AJFCJaWn3wwe2LoxidnNLepwG9k5oqly3mbu85DL6jjPaHVAd5EJtb6uyPrQwWUdN8mJh0rmNlWv67D5SItZLCgcAL6Bsarv0Rwl1_MFGpFeMRIg7rfHKMT4LrVjH8Uq2mJYx3Oidqwa2N--6A9bDfeh1-p8SLGmhNcW2_eTZ7asGTWBMS0S9bskoTEMYmxN_7Xa_pZsH97u318TPdVW1ZHPiSA8GbLgWsbFHJS1jAN4VeFuFFJqq5hHKrE4JfMMmFw-Y4MmvHHh5fsuNt3Re1-oni2niEtIQIWDlTq5orlfHcHDsviYURfzeImFUs98bWzBFANmUtOQuloBNA2CltPkmMZ7pOOIhXZ874HFQChh8H3okSbf8nXUrGVXEsHBNXIKtJqqo6f_PeiSK84LjsZ-u2wGT69Z7Gg52-IAToKm2qqcgzwD7kBx3DMYNwgOjE1rZ_O6lbb_H56BwOAwjMniM5pEtowgSij3jgYaYGeon4_TeWkOtfaZ6y8wVzl9hvvmR2KzmfSNFfAWoMFakG41XrkObQlKdsR97jATmDO3fENUroTXDZx2CwVuPhiAp-BlNDTsuMQbmRpWeLCjj-ti6wsHrwoZBXn_1p9772Jqsr0irqOC_WwPLIrI0wgvCPSufjQooc0RilQe_Bx8dvbvQwSom9dQvT-5BKDiKlzdvC01IYRJFCmR-_BMJR1wam9ltW6WLDWltv0z79DTdYdX_LPamCO8bv9ufGdoG_v6IGMNdAFs32wCWOYGVIwXH5bhVNkhGeq-5cqLGCgoEOllgG5xpISvtB8TEKTvSQYISK1--3m6hfLMpUfcxBEtlT-TqsM7P0rpHrph86Ds1tJSgYQEg0p8saFSMg9kjsEPbMWsPG6P7lEPhYHuG0o7rF2vTK4vE1p0VAyOrv7V7n6vrONk15gaI-8xibXAZSwcCBuOeSCFIg=w683-h911-s-no?authuser=2" alt="foto fede">
-            </div>
-            <div>
-                <h5>Operador Bermuda</h5>
-                <p>Es el integrante mas joven. A la corta edad de ** años es el mas alto del equipo. Tiene el doble de energia que cualquier otro compañero. Siempre esta recorriendo y conociendo el frente y todas las zonas hostiles. Si hay alguien que brinda buena cobertura es este chico. Con un futuro prometedor ya es propietario de un equipamiento sobresaliente. Hermano menor de Operador Jean. Su marcadora principal es una Rossi Pegasus en modo CQB-Asalto.</p>
-                <img src="https://lh3.googleusercontent.com/pw/AJFCJaUm_7FCG8M_rClPW1i0xDua7EcvLUvxyg5UUnTlEH3te13a6GmEDO3QVlaSS616cPwifVGmC3E-dbFfmphVRU6j3nJ7y2swiPIBcP4pzR9BCO75MHlgtYOWZPxZrCbp5Kbo-FSMqshRVP1SgEAJRqeH-WNWw1zJp13OTLpfTDBuJoqw4ITDj8GM-GMRHEWZSRRjXw-uD-iwYJrP41ESb3y4bNIUSVFyoPjrE6sxhTULzYrACmwLSrt4suGcjrOEJ29rifsV53AKswAwa61cCWgG80RG0ezfms-ahcAXYKh1ot1hTCnd2OiaS6J2XAgBSuZUFX-9n3z9zyGt5D60qeZolfhiamsuGwNFFFPiTUhwgLZObMvRkysGCFJudAOV9IFK051TshxUvfgU_s0VmYaIDhI0i_X32CDRwW9JsT844Rjp7W6MGeXL35Tfvib04BqOkqWKrtbj8CqU-QCWnvmFC2L4Wdrk6MZzhga-Wqb8Pyu7PXSfNPUidi-N-JORf_uQ8WZ-jx9lyIFySzJ_78UoUchukLCwnV-ygDadOMJCkOKZXZHnxZiA975jTOteIpNhP5ZTDliZaZtXtRb4plMgCvVbNGBzNwDDlJf6ignquj4a1XAmnRgYyxQ0FT32iPkSrOTURTVw3KMKHqOY2wAAylglNf9PXDn78SUKrLXdhET3DwxKTEBWz_inju6GeymNzIR5RBEuyD0pgO8FoGJyxxY3-mpYYJAX5wQiONrX8sz8huF6oOWzfvVovt9M0OyyLUn7f96cWOwIipI8P5cPr-UkmhlUkRklNqE0vFSkSvsEhBQof1QGH-1b3_ZNLZpjLjvExkyMrWPi7Pmo6wHgNkU3VZieqegaIa4_fZQ35sOTmhE9fqxFMM_3PaReMcr1LurDucltdEtxmnBx1_JsDSkxFeE_wY60nS8ObY7kULiVMw=w683-h911-s-no?authuser=2" alt="foto enano">
-            </div>
-            <div>
-                <h5>Operador Jean</h5>
-                <p>Por ultimo pero no menos importante llega el momento de mencionar al integrante con el equipamiento mas potente del equipo. Siempre jugando atras, evaluando las situaciones de los diferentes frentes de batalla e ideando estrategias de impacto para llevar a cabo los objetivos. Su alcance se lo permite. Y a pesar de que las distancias se acorten, siempre esta listo para defender el terreno con su pistola customizada en corta distancia. Siempre al tanto de objetivos y tecnologia. Planeando logistica y distribucion del resto. Hermano mayor de Operador Bermuda. Su marcadora principal es una Cyma M4 CM.631 en modo DMR. Su marcadora secundaria es una Colt 1911 Custom Hex.</p>
-                <img src="https://lh3.googleusercontent.com/pw/AJFCJaWT4XOrklXQG2wjIb4RgDkspztHaoT-FiKKUhf1EsTW9HUa5kfP43ERnCGadqqkuYBjXj6kKRp6fN7yfqFJeeRiDRN4YNcpdG3pq0dzCDBnIFYl9425riDkaPMd3DPQhHzeTnbDwuJ4XGA2Rfe-PZx7lRiaLCzRf1oKbLSHkTaKdwknY1Kr2bydMBxVjz8BPB6giaeyv3acwZbHwnyxUnKZ5KvsO1fwmno7PgjAxeDHL45C5lZLCid92PCl0bPgx_2qhOs5o52gMkTPKsuW1cEv2W6eVEBAuzGAJMEztQNkPv0RqDbxod_4LtSk6GN1YtvmPNyLHSPOMbDtcmRd0T_baHtDbDXMhxluoNmMEZ3PNzFElJm7nwNwYb8nCUk_fRz9pXUfAlyrvmaYE80z_7Mtu0vNlrdAM4WdMeNprUzplPniTz9VGahlrdcDWy5xdMW1YkE_LiQKMJHjXkk6ewvqB-nAjM6s70Y8EGLYRDKB2Bw_2stCmNmO4DftFYdHHqr182nTzt90gngcU_azo4-dpnuR5sfl94yrOjQTZhNteKm2AKa0tfMQU4WHhcFTqKfNQxEgU8DU9YCwh2yiLK-ivEvcO6F_p8R483SN3rkK7bzLKQNSxMUDdWAM-JYa44VLdd65O2A1L2zAow6qibm8UytTU4ZEkBOTg-_0RjvjQMk22IpLgcl0PKAABn57s0dagDRtlZKxr5eVjs_7VyIyRIp8MaqVGGfhGbQdROBvqwau7wivOSzGGzVztDBeFqcgiLI1duylooVBUOgbl3Gv_ffS1bcGER6e33ZOqfWNbizJnsb21l8W_zOtWgtr7XcWtAt1-_047ipkEOOyLesw4U4TOHHpxE43kTyb0uDRBdsH1FSiZ3UlP5B2l9sCFS2Ob5C78Xb9AzmwEDtLe50RIhLUaBjyTENfpmuPml4AhM0kBA=w683-h911-s-no?authuser=2" alt="foto yo">
-            </div>
-        </section>
+        <div class="main__section__div__texto1">
+                    <h5>Operador Negro</h5>
+                    <p>Conocido como el Capitan del equipo. Forma parte de los fundadores del equipo. Fue el de la idea. Suele tomar decisiones en el frente de la batalla. Siempre esta en el frente y resuelve situaciones conflictivas. Su marcadora principal es una GyG M4 en modo Asalto.</p>
+        </div>
+        <div class="main__section__div__foto1">
+            <img src="https://lh3.googleusercontent.com/pw/AJFCJaV-T8TLyKNAeadhEcZd1OQ9UMmncDRJYllt2jMw9YBMGNIz577MevviO-EMwTuuP-YIzMJCMODErC52oaxJeaFQzOjiJrDYpcl-QN02jQdl8_7eosjdJXVXEAHKYQDKeBHUmJjIUq6_8VgHvMj42vSlHvI591oKhaCvQ7k86snqMOTx6cZ43644d7X9o-E32b10eti8TmG33mRdJDys9PZpTI8cYlLIJ5PXcCoC8qdbgoh-7p5mMTU3fL2MUm12AfRXY5QsRsGwUYXobzESYvJWR-IE-e26Y6CP4FD4KeA70RfunXYGIaeFndZOaAAU227LaB4g7KRqNDm4kTHJLHDPEprPYTLimWHAaGWJSxnshuOzg8gb6RNZF0WmyYYaMTmU1Gd6YbiRJMHb7i7yBW7XdkNU0plF0swr59zqLmrLcIM9qHwfpuG4jFoGm3-DqD8mPZ4Twekw82dY_OV-yuHO_y4H2xy1O8te0P_RoeEsNJ_2OT4O6Q-evOq1AKmaqOw5vKIlxjh81ZPfA8zE-MPg_kr1xMJ_SE_y8jhO8-qrlOMHkzncc9vEJ7jjIX73n9I4UdXVST0ZKbDrzQlmv-pAOcFup8AkrkGqem5Y-0ewSbqqoKszOTFhN-iBqOcQqRGefPuxAifkckwkDIoIMaACiET20KpbFdeyTBQ1Z-0ozaWDO3lDgXuWboLrZmb4_sK5jxQ6Wsr8JHfMQZyrQBQXAEzUfvOwUyXKqMDdnPt3aGQylwYdvALzBGnIF07vdhQeb2ofTrzO3WPFOMjyC6cIpLk2slAHpAtOP_YY0BXnTIwq-IlM23U8e1qF6jVLnT2lp4pomwdAZhK-TPt4SiZeSij_jZzTevx1HS_wT7SADOcDgiCvYSVahzAqtGcmKpVX5KTwOA8txyf5EhbdV0vfn19y_8nNr9dn0J6nGYSMEPSMNA=w600-h800-s-no?authuser=1" alt="foto negro">
+        </div>
+        <div class="main__section__div__texto2">
+                    <h5>Operador Likoy</h5>
+                    <p>Llamado asi por su pasado como Scout. Llego a los cargos mas altos antes de enlistarse en el equipo. Siempre acompañado de su riñonera con la cual relaja las partidas con puchos en cualquier momento. Buscando las fallas de las ofensivas enemigas. Su marcadora principal es una FN Herstal FN2000 en modo CQB.</p>
+        </div>
+        <div class="main__section__div__foto2">
+            <img src="" alt="foto ale">
+        </div>
+        <div class="main__section__div__texto3">
+                    <h5>Operador Mono</h5>
+                    <p>Conocido asi por su parecido a los integrantes de la banda narco "los monos". Su origen es desconocido. Mano derecha del Operador Negro. Cuando te descuidas los encontras discutiendo. Pero eso no significa que no libren batalla codo a codo defendiendose y avanzando en conjunto. Su marcadora principal es una HK G36 Custom en modo Asalto.</p>
+        </div>
+        <div class="main__section__div__foto3">
+            <img src="https://lh3.googleusercontent.com/pw/AJFCJaVPYQOe88eq4bykumiQ6ol6ZilLGB7LQF32Ts6AImHHrDRRc1nPGprCbcIZyl6C0qNowfKeP6rMTDvexWbQosVoFJF9I2hUS1I6CYhM9khXHFEK-pviLsYWHLKtJJ8PYjRILwUFJ0K2XAe9Hkz3KsJIxck-g9bk8jvLNOAl8rrSJGCmFo-U3jP_6jMJjHzRt17oTJFUK9i9Xc8pWp64HYXUiXgliTrrxD7xleaEXbc5MpecmGS-ZyzIYv816riB1DHtQN6jxl6sr1zEW14nI7nR-FiCYZTe_ye9adBuLBWGYJiYHfUluvuLYL5QV6fWiH553T9oA_t0tiyXrpnxZx24IUvwopxH4qZ0LcsxeCqFQ6MAcuZrHF_Cn14h5zJvZJlDRy72vy7LLiGozL7WVY-xoTGcHiRUNmoYyPcECdeirwXAPSTK_eeVquj9WzdcvmUmFO14mkeC3ykZkaDYJNmgla32XEywqc8ERhhDaH0w2bt8feLfKj0SgDhjnL_4okCiTLNAKBz0K-ACFEIsghRkafkqs7n-WItK0hYo-3ypq6MzOGCkB3v0MTw51cvlmqNyjHhdaGIjq5jIAASphz9d6GPLMeaG04KzXEscRVF2aiibr7zMEX4I88AgFgRuJSM7kgkNMsEbhrTyG3y_gD3Y4JPS5qTnJ4rmovZMMJDcBjSyywvfcL0OXADTe7R-VcefY0Uy1WsFH7pFjhIy8H-Pf9k2Y_1_x-Tu4pEGUDM6B9KTyl0VsOpdAgfSEgLFHyg14ETjuoiviCv7mjGC3qPmhCdHs_cKsCAJdgIe3WAzDzXyhkVF8qn0b4e6YshSYY4-PMGB90oFayIekQDDCkWOQ0L69Plf5DW2BNCTuyQuOeGolTGJ-xoZEPTv4nIocrgd0eedareocno4tfnUenfpNatnE-R7p4RLxxPeefXdWW8gOw=w683-h911-s-no?authuser=1" alt="foto mono">
+        </div>
+        <div class="main__section__div__texto4">
+                    <h5>Operador Fede</h5>
+                    <p>Con su alias aun no ganado, se equipa de forma rapida, buscando los mejores componentes para su armamento. Suele ir a explorar en misiones de reconocimiento junto al Operador Mono u otro compañero que pueda seguirle el paso. Habil corredor. Fanatico de las armas de origen Ruso. Su marcadora principal es una Krytak AK74 en modo Asalto.</p>
+        </div>
+        <div class="main__section__div__foto4">
+                    <img src="https://lh3.googleusercontent.com/pw/AJFCJaW-pnroNj9CAWViFd4u9X7nDmryqSbEGsXvIAeaHJNEX_1e5qzSYgMxsvXpYR1ZK5N1zGGAFm4NaidAm7bfcxE0ZUfId31Bc5381lwlkotoKAvHzlmt2JvAJ2K-law3a4zzgtPEah-8A0-gGjxjwGPmzXqSFheoVgfcE15EtMWF-GRIacQEaQkzKGpqMdhsBBuRHG4oZDoZUkZPXzdOjovb-cOtFGbC1ZtMqLbZoMBUeW4JHieCF-rCtxoSBFHF7sN8Hz8NoWs-chkUZTR6WLNsygm9OfmNwRYu2EJAcqddCtWfgSdKDd0MqLcX6jcqEYdFkDumPGJ5WVURjqSiwgQncPJMDYghk6UwcH1qrHaKneqru4R2RMoxEq5OAk7orWHNdkwTdYR9H3TlM5Z7vN-gAZFeBl0B9c6pIRcSlQVrk3bB-m6JMSAvuzIGfPak06YoZoyQ3ftBjzLftor2C0TD6-DW2psdyaAVu_qIxtcnfc6k_M92e2EO3uvDUDIEbr67BsldqrItSjI5VrIV7qrjKwh1ATSrTgjbxBAwEp9IDSs2x3b3UQdfev_ouz8DJS2rfTTPO3aHknPoGjKcoNv46iMm5vgJ9w9m0jTJ4DCG5tva8Y9LIAQomggzVNpQ6Ffc8OSOGFIqCeiwfTQCguqtzlxc2_LBMsYPvwFlTFxQ7QD1Ec2teA0BwJt0OBGJSFPZqBau2kwsUt7f7m13ninrx_LqutXOWWTMr8WECKdIY66LVow7a7a2uPZKt2N-_tS2ru3GsOICuqoOFf8m5KwkQOeZg5dflyC7sj_O3U3zTsx8O5ta76pUvc7OD5M-e7ujlW4yPjlpUUNmHoBOFn5BcmN1icnI0N5uuKyG-Zq_JD6IrkHCBcHqbDcm9ezJHcmJZcPzVCxS0vg67FOA-uwFTYBa_kKxn9uN5sFPMUMVGMvniQ=w683-h911-s-no?authuser=1" alt="foto fede">
+        </div>
+        <div class="main__section__div__texto5">
+                    <h5>Operador Bermuda</h5>
+                    <p>Es el integrante mas joven. A la corta edad de ** años es el mas alto del equipo. Tiene el doble de energia que cualquier otro compañero. Siempre esta recorriendo y conociendo el frente y todas las zonas hostiles. Si hay alguien que brinda buena cobertura es este chico. Con un futuro prometedor ya es propietario de un equipamiento sobresaliente. Hermano menor de Operador Jean. Su marcadora principal es una Rossi Pegasus en modo CQB-Asalto.</p>
+        </div>
+        <div class="main__section__div__foto5">
+            <img src="https://lh3.googleusercontent.com/pw/AJFCJaXpEd2bhp1HNZzsnthCMTMevvjmGpnprAIf4c8ewQkho-jYQ-Qt9MS5YHPt0meIY0rj2_nwqtY15XsnRsvEv8iy9bY7LQJNMzuLUd1rmZHpCRG8irxbJABg9u8HxP1k3AsRQ7BIB9gKUv5R3JR6_r1ib4yiN3qeUdGqMhpdm6cJwAwJH95km-32RSMU3FSutpOFXzwRHCKWbvfWLlnGZ4UUn9eQQJIp0grXn9cHEOyNdKKw4bd_3IIbO9oPmToabVaFognBHV-yY1tTNrvnwBkLbbwARuSxXRACJvTYdWBNqxemgjeqaKOJ6n3EyjjrOMuHGKgTq6lgQnDbnCeeM0PzH10VCCubRxEAxiYNK1JDd4LxMkMFaP2Mum0aZw4MyOmyP2dD_dHGb3q4OUc_cSHvEIr12BQSuxRdTmkSfUHrzmkUA-VT8alUS6MG-aPo_qtiYzj_ZwxNIe-ejpX7nvmVhtKJ02oAyndxoQW6QjFl-VyCVFpK2I7ezWxLwrrfvzjmBu-BT-u_sn4KzDSwIVdPyx_QATl7wxwK2SQMgEc-6vsmhK5OmfRDF8LHahcMbmIPqbnubDzRIS2HO2saHu_2mCLCE_fkfno8QYZBq4goB0FMfwBAKqIBt7lGl7AQjz2Y3Mt-3hLFdivpVxJA76Edmv9QMefJflZdNnb9gjwX14niSy9Fltb8-1gCW_qu3ZiMsg7ktDYju_Q7e66T88gp5NGd0cgHm-qCV2PeBqFK5jd8C6WkzdrakbZYUuSDKMVIqNzCXTuqrwLKFjmWOj3D-Wg_XKduHjj_OPYiPASqPTfU3bgEumxWO19UhDE0tn-hrlYLcSt3x8cG0r1g8j-7ptfZJNggpB0alu-_hl_D7_MxofWPU7v_T0--ICx95NRfK_jueFfaaOKwAhThVNRGZObF2KwMMESY0sPh2PDrbIBUnw=w683-h911-s-no?authuser=1" alt="foto enano">
+        </div>
+        <div class="main__section__div__texto6">
+                    <h5>Operador Jean</h5>
+                    <p>Por ultimo pero no menos importante llega el momento de mencionar al integrante con el equipamiento mas potente del equipo. Siempre jugando atras, evaluando las situaciones de los diferentes frentes de batalla e ideando estrategias de impacto para llevar a cabo los objetivos. Su alcance se lo permite. Y a pesar de que las distancias se acorten, siempre esta listo para defender el terreno con su pistola customizada en corta distancia. Siempre al tanto de objetivos y tecnologia. Planeando logistica y distribucion del resto. Hermano mayor de Operador Bermuda. Su marcadora principal es una Cyma M4 CM.631 en modo DMR. Su marcadora secundaria es una Colt 1911 Custom Hex.</p>
+        </div>
+        <div class="main__section__div__foto6">
+            <img src="https://lh3.googleusercontent.com/pw/AJFCJaXXL8AtW2G-m11t4JozM5b1nNdE9JPSqk8llAuBh3fHEZsyxGsLjGKh-PNw17dIpLz905g9agReoI3uVoapKj_psXt6v4-NQFKDKMrcWt121gZU_kojftlFvkrVzRzH_XM3U1E92_8kzSF76Eo_s6WORMqQynw75Mwf2P9dTTyk_ITuH7FyzwO8V8Od8bh7BeAze-pA-q3apoKjs-74rVC60_1G_sC5M-jHgxzQuMofgiFDKqdzNkh-0OvdslCj7RGMVscv2YuIWH1Evstymw_knJ0plxLBzL9EzEm7mflQfad7AXNeyFXs0xeu51kAxJlh30MYLDIQzByAqUCaliOocD-uXNClb13dq2RhwB2tj08vlkOmhXPAHpICd0EjCYP0ZGsklAG0iiMvGiCWUiE8KkwSYCZ8Jhl9ixSj7rExZNy3ZTVj1JTUyjbsXE_q7U_wO7x6UHyqBhze81_X1dN6NzUENzjnuzXPM7FPg_RCl-wPsCfb2AHiJdvWWHnASrNzXW14NvBiL0_j2UxMl8GGv-jUcuCgv1ZTjLIlyUMRrDVURPEX7_qP9z4R7GGvTAjkmPTTgnzn_rqeVyilAFzFbjyFCIETLqeSTOLWVKA0ZK_A99WtNtzO864pniDBVNJXWXwlZ0439ezbydK7ga9nDGQvx_WtiGtOR25-uq-F2DUNIbPn6fGE5kA1YgM_5jfMZ6TsxxkXTF9uXqlcG1r49jqu-TCpil7NKk7s4fhPRzGmWF_OyssvV_T6mWQykLarljcQbK80_yt3sf6VuiD-SMJq1N_4-sW5R5BTRsbKDVHjkbLCcZUQYJ3EmNhywZW-C8e2OHI39FpsGrEenU-CEIYiT1ayYOkF9qTWPidzGIsGGIrQS5Tw6khGBmHyv-G8V5mAR111OFApX6fCP9jSp2oaedxSyN5w-USa7jC5bwZLXw=w683-h911-s-no?authuser=1" alt="foto yo">
+        </div>
     </main>
     <footer>
         <div>
             <!--panel de navegacion inferior-->
             <ul class="nav justify-content-evenly">
-                <li class="nav-item bg-primary rounded">
-                    <a class="nav-link btn btn-secondary text-light" href="../index.html">Inicio</a>
+                <li>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../index.html">Inicio</a>
                 </li>
-                <li class="nav-item bg-primary rounded">
-                    <a class="nav-link btn btn-secondary text-light" href="../pages/quienes-somos.html">Quienes
+                <li>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../pages/quienes-somos.html">Quienes
                         somos</a>
                 </li>
-                <li class="nav-item bg-primary rounded">
-                    <a class="nav-link btn btn-secondary text-light" href="../pages/experiencias.html">Experiencias</a>
+                <li>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../pages/experiencias.html">Experiencias</a>
                 </li>
-                <li class="nav-item bg-primary rounded">
-                    <a class="nav-link btn btn-secondary text-light" href="../pages/merchandising.html">Merchandising</a>
+                <li>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../pages/merchandising.html">Merchandising</a>
                 </li>
-                <li class="nav-item bg-primary rounded">
-                    <a class="nav-link btn btn-secondary text-light" href="../pages/contacto.html">Contacto</a>
+                <li>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../pages/contacto.html">Contacto</a>
                 </li>
             </ul>
         </div>
