--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         <section class="main__section__hero">
             <h3>Bienvenidos a la pagina oficial del Team Ghost Arg</h3>
             <div>
-                <p>Pagina oficial del equipo mas picante del condado. Una serie de maniaticos fanaticos de las armas que encontraron un juego en el cual pueden satisfacer todas sus necesidades de matanza y diversion
+                <p>Pagina oficial del equipo mas picante del condado. Una serie de maniaticos fanaticos de las armas que
+                    encontraron un juego en el cual pueden satisfacer todas sus necesidades de matanza y diversion
                 </p>
                 <img src="./image/equipo airsoft.jpeg" alt="imagen equipo">
             </div>
@@ -92,21 +93,26 @@
         <div>
             <!--panel de navegacion inferior-->
             <ul class="nav justify-content-evenly">
-                <li class="nav-item bg-primary rounded">
-                    <a class="nav-link btn btn-secondary text-light" href="./index.html">Inicio</a>
+                <li>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                        href="./index.html">Inicio</a>
                 </li>
-                <li class="nav-item bg-primary rounded">
-                    <a class="nav-link btn btn-secondary text-light" href="./pages/quienes-somos.html">Quienes
+                <li>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                        href="./pages/quienes-somos.html">Quienes
                         somos</a>
                 </li>
-                <li class="nav-item bg-primary rounded">
-                    <a class="nav-link btn btn-secondary text-light" href="./pages/experiencias.html">Experiencias</a>
+                <li>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                        href="./pages/experiencias.html">Experiencias</a>
                 </li>
-                <li class="nav-item bg-primary rounded">
-                    <a class="nav-link btn btn-secondary text-light" href="./pages/merchandising.html">Merchandising</a>
+                <li>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                        href="./pages/merchandising.html">Merchandising</a>
                 </li>
-                <li class="nav-item bg-primary rounded">
-                    <a class="nav-link btn btn-secondary text-light" href="./pages/contacto.html">Contacto</a>
+                <li>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                        href="./pages/contacto.html">Contacto</a>
                 </li>
             </ul>
         </div>
