--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -58,7 +58,7 @@
                     <p>Llamado asi por su pasado como Scout. Llego a los cargos mas altos antes de enlistarse en el equipo. Siempre acompañado de su riñonera con la cual relaja las partidas con puchos en cualquier momento. Buscando las fallas de las ofensivas enemigas. Su marcadora principal es una FN Herstal FN2000 en modo CQB.</p>
         </div>
         <div class="main__section__div__foto2 main__section__div__foto">
-            <img src="" alt="foto ale">
+            <img src="https://i.postimg.cc/hjkH0yrN/foto-ale.jpg" alt="foto ale">
         </div>
         <div class="main__section__div__texto3 main__section__div__texto">
                     <h5>Operador Mono</h5>
